// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipGroup chip group default 1`] = `
<ul
  className="pf-c-chip-group"
>
  <InnerChipGroup
    className=""
    collapsedText="\${remaining} more"
    expandedText="Show Less"
    isOpen={false}
    onToggleCollapse={[Function]}
    withToolbar={false}
  >
    <Chip
      className=""
      closeBtnAriaLabel="close"
      component="div"
      isOverflowChip={false}
      isReadOnly={false}
      onClick={[Function]}
      tooltipPosition="top"
    >
      1.1
    </Chip>
  </InnerChipGroup>
</ul>
`;

exports[`ChipGroup chip group with toolbar 1`] = `
<ContextProvider
  value="h4"
>
  <InnerChipGroup
    className=""
    collapsedText="\${remaining} more"
    expandedText="Show Less"
    isOpen={false}
    onToggleCollapse={[Function]}
    withToolbar={true}
  >
    <Component>
      <Chip
        className=""
        closeBtnAriaLabel="close"
        component="div"
        isOverflowChip={false}
        isReadOnly={false}
        onClick={[Function]}
        tooltipPosition="top"
      >
        1.1
      </Chip>
    </Component>
  </InnerChipGroup>
</ContextProvider>
`;
